解决压测agent启动锁住窗口和不能执行第三方jar包的问题